[gd_scene load_steps=2 format=3 uid="uid://ba5xymsl32oup"]

[ext_resource type="Script" uid="uid://cbajli0uigxta" path="res://scripts/ui/production_ui.gd" id="1_prod"]

[node name="ProductionUI" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_prod")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="BuildingName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Town Center"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ProductionQueueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Production Queue:"
horizontal_alignment = 1

[node name="ProductionQueue" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TrainWorkerButton" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
text = "Train Worker (ðŸ’°50)"
